# benchmark_flash_attention

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  benchmark-1-GQA1-256-32-32-128.md  benchmark-1-GQA1-256-32-32-96.md  benchmark-1-GQA4-256-32-8-128.md  benchmark-1-GQA8-256-64-8-128.md  benchmark-64-GQA1-256-32-32-128.md  benchmark-64-GQA1-256-32-32-96.md  benchmark-64-GQA4-256-32-8-128.md  benchmark-64-GQA8-256-64-8-128.md  download_lib.sh  flash_api.h  flash_attention_benchmark.cu  flash_attention_benchmark_kvcache.cu  flash_attention_benchmark_standard.cu  flash_attention_benchmark_varlen.cu  log  ncu_metrics.csv  ncu_report.py  run_all.sh  run_all.sh.bak  test.sh  test2.sh  test2_full.sh  test3.sh  test_ncu_profile_time  test_original_runtime
logs/: log_ncu  nvbit_1024  nvbit_128  nvbit_512  test_ncu_full_time  test_ncu_profile_base_time  test_ncu_profile_none_time  test_ncu_profile_time  test_nvbit_profile_time
results/: benchmark-1-GQA1-256-32-32-128.md  benchmark-1-GQA1-256-32-32-96.md  benchmark-1-GQA4-256-32-8-128.md  benchmark-1-GQA8-256-64-8-128.md  benchmark-64-GQA1-256-32-32-128.md  benchmark-64-GQA1-256-32-32-96.md  benchmark-64-GQA4-256-32-8-128.md  benchmark-64-GQA8-256-64-8-128.md  benchmark-batch-scaling-1.md  benchmark-batch-scaling-128.md  benchmark-batch-scaling-16.md  benchmark-batch-scaling-2.md  benchmark-batch-scaling-32.md  benchmark-batch-scaling-4.md  benchmark-batch-scaling-64.md  benchmark-batch-scaling-8.md  benchmark-gqa-1.md  benchmark-gqa-16.md  benchmark-gqa-2.md  benchmark-gqa-32.md  benchmark-gqa-4.md  benchmark-gqa-8.md  benchmark-headdim-128.md  benchmark-headdim-160.md  benchmark-headdim-64.md  benchmark-headdim-80.md  benchmark-headdim-96.md  benchmark-llama2-70b-gqa8-1.md  benchmark-llama2-7b-1.md  benchmark-mistral-7b-1.md  benchmark-mqa-1.md  benchmark-pagesize-1024.md  benchmark-pagesize-128.md  benchmark-pagesize-256.md  benchmark-pagesize-512.md  benchmark-phi2-1.md  benchmark-seqlen-1024.md  benchmark-seqlen-16384.md  benchmark-seqlen-2048.md  benchmark-seqlen-32768.md  (+2 more)
results_kvcache/: batch-scaling-1.md  batch-scaling-16.md  batch-scaling-2.md  batch-scaling-32.md  batch-scaling-4.md  batch-scaling-64.md  batch-scaling-8.md  deepseek-r1.md  gpt-small.md  gqa-1.md  gqa-32.md  gqa-4.md  gqa-5.md  gqa-8.md  llama2-7b.md  mixtral-7b.md  non-causal.md  pagesize-1024.md  pagesize-128.md  pagesize-2048.md  pagesize-256.md  pagesize-512.md  phi4.md  prefill-4k.md  qwen2.5-32b.md  seqlen-1024.md  seqlen-16384.md  seqlen-32768.md  seqlen-4096.md  seqlen-8192.md  window-1024.md  window-128.md  window-4096.md
results_standard/: batch-scaling-1.md  batch-scaling-16.md  batch-scaling-2.md  batch-scaling-32.md  batch-scaling-4.md  batch-scaling-64.md  batch-scaling-8.md  deepseek-r1-window.md  deepseek-r1.md  extreme-case.md  gpt2.md  gqa-ratio-1.md  gqa-ratio-16.md  gqa-ratio-2.md  gqa-ratio-32.md  gqa-ratio-4.md  gqa-ratio-5.md  gqa-ratio-8.md  headdim-128.md  headdim-160.md  headdim-56.md  headdim-64.md  headdim-80.md  headdim-96.md  llama2-70b-gqa8.md  llama2-7b.md  mixtral-7b.md  non-causal.md  phi4.md  qwen2.5-32b.md  window-1024.md  window-128.md  window-512.md  window-asymmetric.md
results_varlen/: deepseek-extreme.md  gqa-1.md  gqa-32.md  gqa-4.md  gqa-8.md  headdim-128.md  headdim-160.md  headdim-56.md  headdim-64.md  headdim-80.md  headdim-96.md  non-causal.md  seqlen-1024.md  seqlen-16384.md  seqlen-32768.md  seqlen-4096.md  (+5 more)
(+38 files in other folders)
